--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
- 
+  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -25,7 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  
+  <link href="assets/css/style.css" rel="stylesheet">
 
 
 </head>
@@ -38,8 +38,7 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
-
-      <div class="">
+      <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
         <div class="social-links mt-3 text-center">
@@ -74,7 +73,7 @@
           <h2>Portfoio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            
+            <li>Portfoio Details</li>
           </ol>
         </div>
 
@@ -86,7 +85,7 @@
       <div class="container">
 
         <div class="row gy-4">
-          <div class="remove me please">
+        
 
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
